# BookWiki

./: .gitignore  build.gradle  compose.yaml
conductor/: metadata.json  plan.md  product-guidelines.md  product.md  spec.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/chore_update_markdown-it_20260215/: plan.md  spec.md
conductor/archive/db-migration-h2_20260213/: index.md  metadata.json  plan.md  spec.md
conductor/archive/db_media_storage_20260218/: index.md
conductor/archive/emote_management_20260216/: spec.md
conductor/archive/export-system_20260212/: index.md  metadata.json  plan.md  spec.md
conductor/archive/export_import_system_20260319/: index.md  spec.md
conductor/archive/fix-double-scrollbars_20260212/: index.md  metadata.json  plan.md  spec.md
conductor/archive/fix-page-counter_20260212/: index.md  metadata.json  plan.md  spec.md
conductor/archive/fix_main_window_close_20260322/: spec.md
conductor/archive/fix_multiple_installers_20260318/: index.md  metadata.json  spec.md
conductor/archive/fix_partial_pagination_20260219/: metadata.json  plan.md  spec.md
docs/: MANUAL_MIGRATION.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  theme.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: main.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/pages/: Home.tsx  (+6 more)
scripts/: Cargo.toml  PathProvider.java  build.gradle  bundle-jre.bat  main.rs  tauri.conf.json
scripts/wrapper/: Cargo.toml
scripts/wrapper/src/: main.rs
(+217 files in other folders)
