[package]
name = "bookwiki"
version = "0.3.0"
description = "A Tauri App"
authors = ["aless"]
edition = "2021"

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "bookwiki"
path = "src/main.rs"
