[package]
name = "bookwiki"
version = "0.6.0"
description = "A Tauri App"
authors = ["aless"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[[bin]]
name = "bookwiki"
path = "src/main.rs"
